--- a/src/styles/Neiuprocure.css
+++ b/src/styles/Neiuprocure.css
@@ -1,4 +1,4 @@
-
+/*
 .table thead {
     background-color: #f0f0f0; 
     border-radius: 10px 10px 0 0; 
@@ -25,4 +25,4 @@
     flex-grow: 1; 
     overflow: auto; 
   }
-  
+  */
